component updater Load API by default loads image

PopBool sets its parameter to be false on a failure (dbus optional
parameter is missing).
I reset the mount variable to be true on a failure return of PopBool.

BUG=chromium:803681
TEST=test_that -b ${BOARD} 100.127.0.229 platform_AddPrinter.epson

Change-Id: Ibc8981df635b121057b6e43dc3fe3dc7b317fd75